; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_ReplyWithString.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_ReplyWithString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RM_ReplyWithString(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @moduleGetReplyClient(i32* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @addReplyBulk(i32* %14, i32* %15)
  %17 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %11
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32* @moduleGetReplyClient(i32*) #1

declare dso_local i32 @addReplyBulk(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
